latest NuGets & vcpkgs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,8 +85,7 @@ jobs:
       run: nuget restore SoundWinAgent.sln
 
     - name: Integrate vcpkg with MSBuild
-      run: |
-        vcpkg integrate install
+      run: vcpkg integrate install
 
     - name: Build with MSBuild
       run: msbuild /p:Configuration=Release /p:VcpkgEnabled=true /p:VcpkgManifestPath=Projects/SoundWinAgent/vcpkg.json /target:Rebuild -restore
