--- a/Projects/SoundWinAgent/packages.config
+++ b/Projects/SoundWinAgent/packages.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="7-Zip.CommandLine" version="18.1.0" targetFramework="native" />
-  <package id="CommonCppModules" version="2.1.0" targetFramework="native" />
+  <package id="CommonCppModules" version="2.1.1-RC018" targetFramework="native" />
   <package id="MSBuildTasks" version="1.5.0.235" targetFramework="native" developmentDependency="true" />
-  <package id="SpdLogger" version="2.1.0" targetFramework="native" />
-  <package id="spdlog-native" version="0.17.0" targetFramework="native" />
+  <package id="SpdLogger" version="2.1.1-RC016" targetFramework="native" />
 </packages>
