--- a/Projects/SoundWinAgent/SoundWinAgent.vcxproj.filters
+++ b/Projects/SoundWinAgent/SoundWinAgent.vcxproj.filters
@@ -69,6 +69,7 @@
     <None Include="packages.config" />
     <None Include="res\SoundWinAgent.rc2" />
     <None Include="GenerateCertificate.ps1" />
+    <None Include="CodeSign.pfx" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SoundWinAgent.rc" />
