--- a/Projects/SoundAgentCli/SoundAgentCli.vcxproj
+++ b/Projects/SoundAgentCli/SoundAgentCli.vcxproj
@@ -92,7 +92,7 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildThisFileDirectory)..\..\msbuildLibCpp\Ed.Cpp.targets" />
-  <Target Name="ProcessReleaseNotesAndZipOutput" AfterTargets="Build">
+  <Target Name="ZipOutput" AfterTargets="Build">
     <ItemGroup>
       <DependentDLLs Include="@(ProjectReference->'%(RootDir)%(Directory)$(OutDir)%(Filename).dll')" />
     </ItemGroup>
@@ -100,19 +100,10 @@
     <PropertyGroup>
       <BaseDirectory>$(MSBuildThisFileDirectory)..\..\</BaseDirectory>
       <ArtifactsDirectory>$(BaseDirectory)artifacts\</ArtifactsDirectory>
-      <ReleaseNotesFileName>SoundWinAgent-Release-Notes.md</ReleaseNotesFileName>
-      <ReleaseNotesTargetPathName>$(ArtifactsDirectory)$(ReleaseNotesFileName)</ReleaseNotesTargetPathName>
       <PublishFullDirectory>$(ProjectDir)PublishDir</PublishFullDirectory>
       <ZipFileNameSuffix Condition=" '$(Configuration)' == 'Debug' ">-Debug</ZipFileNameSuffix>
       <ZipFileName>$(ArtifactsDirectory)$(AssemblyName)$(ZipFileNameSuffix)-$(PackageVersion).zip</ZipFileName>
     </PropertyGroup>
-    <Copy SourceFiles="$(BaseDirectory)$(ReleaseNotesFileName)" DestinationFolder="$(ArtifactsDirectory)" />
-    <FileUpdate Files="$(ReleaseNotesTargetPathName)" Regex="\$version\$" ReplacementText="$(PackageVersion)" />
-    <Time Format="dd.MM.yyyy">
-      <Output TaskParameter="FormattedTime" PropertyName="BuildDate" />
-    </Time>
-    <FileUpdate Files="$(ReleaseNotesTargetPathName)" Regex="\$date\$" ReplacementText="$(BuildDate)" />
-    <Copy DestinationFolder="$(PublishFullDirectory)" SourceFiles="$(ArtifactsDirectory)$(ReleaseNotesFileName)" />
     <ItemGroup>
       <BinFiles Include="$(OutputPath)*.dll" />
       <BinFiles Include="$(OutputPath)*.exe" />
