--- a/Projects/SoundWinAgent/SoundWinAgent.vcxproj
+++ b/Projects/SoundWinAgent/SoundWinAgent.vcxproj
@@ -114,18 +114,18 @@
       <BaseDirectory>$(MSBuildThisFileDirectory)..\..\</BaseDirectory>
       <ArtifactsDirectory>$(BaseDirectory)artifacts\</ArtifactsDirectory>
       <ReleaseNotesFileName>SoundWinAgent-Release-Notes.md</ReleaseNotesFileName>
-      <ReleaseNotesTargetPathName>$(ArtifactsDirectory)$(ReleaseNotesFileName)</ReleaseNotesTargetPathName>
       <PublishFullDirectory>$(ProjectDir)PublishDir\</PublishFullDirectory>
+      <ReleaseNotesTargetPathName>$(PublishFullDirectory)$(ReleaseNotesFileName)</ReleaseNotesTargetPathName>
       <ZipFileNameSuffix Condition=" '$(Configuration)' == 'Debug' ">-Debug</ZipFileNameSuffix>
       <ZipFileName>$(ArtifactsDirectory)$(AssemblyName)$(ZipFileNameSuffix)-$(PackageVersion).zip</ZipFileName>
     </PropertyGroup>
-    <Copy SourceFiles="$(BaseDirectory)$(ReleaseNotesFileName)" DestinationFolder="$(ArtifactsDirectory)" />
+    <MakeDir Directories="$(ArtifactsDirectory)" Condition="!Exists('$(ArtifactsDirectory)')" />
+    <Copy DestinationFolder="$(PublishFullDirectory)" SourceFiles="$(BaseDirectory)$(ReleaseNotesFileName)" />
     <FileUpdate Files="$(ReleaseNotesTargetPathName)" Regex="\$version\$" ReplacementText="$(PackageVersion)" />
     <Time Format="dd.MM.yyyy">
       <Output TaskParameter="FormattedTime" PropertyName="BuildDate" />
     </Time>
     <FileUpdate Files="$(ReleaseNotesTargetPathName)" Regex="\$date\$" ReplacementText="$(BuildDate)" />
-    <Copy DestinationFolder="$(PublishFullDirectory)" SourceFiles="$(ArtifactsDirectory)$(ReleaseNotesFileName)" />
     <ItemGroup>
       <BinFiles Include="$(OutputPath)*.dll" />
       <BinFiles Include="$(OutputPath)*.exe" />
