format time tests

--- a/Projects/SoundAgentLibTests/SoundAgentLibTests.vcxproj.filters
+++ b/Projects/SoundAgentLibTests/SoundAgentLibTests.vcxproj.filters
@@ -28,5 +28,11 @@
     <ClCompile Include="SoundDeviceCollectionTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TimeTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
