--- a/Projects/SoundAgentCli/SoundAgentCli.vcxproj
+++ b/Projects/SoundAgentCli/SoundAgentCli.vcxproj
@@ -26,8 +26,8 @@
   </ImportGroup>
   <ImportGroup Label="Shared">
     <Import Project="..\..\packages\MSBuildTasks.1.5.0.235\build\MSBuildTasks.targets" Condition="Exists('..\..\packages\MSBuildTasks.1.5.0.235\build\MSBuildTasks.targets')" />
-    <Import Project="..\..\packages\CommonCppModules.2.2.0\build\native\CommonCppModules.targets" Condition="Exists('..\..\packages\CommonCppModules.2.2.0\build\native\CommonCppModules.targets')" />
-    <Import Project="..\..\packages\SpdLogger.2.2.0\build\native\SpdLogger.targets" Condition="Exists('..\..\packages\SpdLogger.2.2.0\build\native\SpdLogger.targets')" />
+    <Import Project="..\..\packages\CommonCppModules.2.2.1-RC006\build\native\CommonCppModules.targets" Condition="Exists('..\..\packages\CommonCppModules.2.2.1-RC006\build\native\CommonCppModules.targets')" />
+    <Import Project="..\..\packages\SpdLogger.2.2.1-RC006\build\native\SpdLogger.targets" Condition="Exists('..\..\packages\SpdLogger.2.2.1-RC006\build\native\SpdLogger.targets')" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
@@ -131,7 +131,7 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\..\packages\MSBuildTasks.1.5.0.235\build\MSBuildTasks.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\MSBuildTasks.1.5.0.235\build\MSBuildTasks.targets'))" />
-    <Error Condition="!Exists('..\..\packages\CommonCppModules.2.2.0\build\native\CommonCppModules.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CommonCppModules.2.2.0\build\native\CommonCppModules.targets'))" />
-    <Error Condition="!Exists('..\..\packages\SpdLogger.2.2.0\build\native\SpdLogger.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\SpdLogger.2.2.0\build\native\SpdLogger.targets'))" />
+    <Error Condition="!Exists('..\..\packages\CommonCppModules.2.2.1-RC006\build\native\CommonCppModules.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CommonCppModules.2.2.1-RC006\build\native\CommonCppModules.targets'))" />
+    <Error Condition="!Exists('..\..\packages\SpdLogger.2.2.1-RC006\build\native\SpdLogger.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\SpdLogger.2.2.1-RC006\build\native\SpdLogger.targets'))" />
   </Target>
 </Project>
