NuGet config corrected

--- a/NuGet.Config
+++ b/NuGet.Config
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <packageSources>
-        <add key="github" value="https://nuget.pkg.github.com/eduarddanziger/index.json" />
+        <add key="github02" value="https://nuget.pkg.github.com/eduarddanziger/index.json" />
     </packageSources>
     <packageSourceCredentials>
-        <github>
+		<github02>
             <add key="Username" value="ed-anz" />
-            <!--            <add key="ClearTextPassword" value="" /> -->
-        </github>
+            <add key="ClearTextPassword" value="" />
+        </github02>
     </packageSourceCredentials>
 </configuration>
