--- a/Projects/SoundAgentLibTests/SoundAgentLibTests.vcxproj
+++ b/Projects/SoundAgentLibTests/SoundAgentLibTests.vcxproj
@@ -21,7 +21,8 @@
   </PropertyGroup>
   <Import Project="$(MSBuildThisFileDirectory)..\..\msbuildLibCpp\Ed.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
-    <Import Project="..\..\packages\CommonCppModules.2.2.1-RC006\build\native\CommonCppModules.targets" Condition="Exists('..\..\packages\CommonCppModules.2.2.1-RC006\build\native\CommonCppModules.targets')" />
+    <Import Project="..\..\packages\CommonCppModules.2.2.1-RC015\build\native\CommonCppModules.targets" Condition="Exists('..\..\packages\CommonCppModules.2.2.1-RC015\build\native\CommonCppModules.targets')" />
+    <Import Project="..\..\packages\SpdLogger.2.2.1-RC015\build\native\SpdLogger.targets" Condition="Exists('..\..\packages\SpdLogger.2.2.1-RC015\build\native\SpdLogger.targets')" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
@@ -84,6 +85,7 @@
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\CommonCppModules.2.2.1-RC006\build\native\CommonCppModules.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CommonCppModules.2.2.1-RC006\build\native\CommonCppModules.targets'))" />
+    <Error Condition="!Exists('..\..\packages\CommonCppModules.2.2.1-RC015\build\native\CommonCppModules.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CommonCppModules.2.2.1-RC015\build\native\CommonCppModules.targets'))" />
+    <Error Condition="!Exists('..\..\packages\SpdLogger.2.2.1-RC015\build\native\SpdLogger.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\SpdLogger.2.2.1-RC015\build\native\SpdLogger.targets'))" />
   </Target>
 </Project>
