--- a/Projects/SoundAgentLib/packages.config
+++ b/Projects/SoundAgentLib/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonCppModules" version="2.2.1-RC015" targetFramework="native" />
+  <package id="CommonCppModules" version="2.2.1" targetFramework="native" />
 </packages>
