--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,7 +87,7 @@ jobs:
       run: vcpkg integrate install
 
     - name: Build with MSBuild
-      run: msbuild /p:Configuration=Release /p:VcpkgEnabled=true /p:VcpkgManifestPath=vcpkg.json /target:Rebuild -restore
+      run: msbuild /p:Configuration=Release /p:VcpkgEnabled=true /p:VcpkgManifestPath=vcpkg.json /p:VcpkgTriplet=x64-windows-static /target:Rebuild -restore
 
     - name: Upload entire artifacts directory
       uses: actions/upload-artifact@v4
