--- a/Projects/SoundAgentLib/SoundAgentLib.vcxproj.filters
+++ b/Projects/SoundAgentLib/SoundAgentLib.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="public\StringUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="public\TimeUtil.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
