--- a/Projects/SoundWinAgent/SoundWinAgent.vcxproj.filters
+++ b/Projects/SoundWinAgent/SoundWinAgent.vcxproj.filters
@@ -11,7 +11,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h">
+    <ClInclude Include="os-dependencies.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="targetver.h">
@@ -21,9 +21,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AssemblyInformation.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\SoundAgentLib\generate-uuid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AudioDeviceApiClient.h">
@@ -40,9 +37,6 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="stdafx.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="SoundAgentService.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
