--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = msbuildLibCpp
 	url = https://github.com/eduarddanziger/msbuildLibCpp.git
 	branch = main
+[submodule "ApiClient"]
+	path = ApiClient
+	url = https://github.com/eduarddanziger/SoundAgentLib.git
+	branch = main
