Refactor SoundDeviceCollection: Added new virtual methods for activating and deactivating loops, + CollectionFactoryImpl.cpp for CreateDeviceCollection implementation

--- a/Projects/SoundAgentCli/SoundAgentCli.vcxproj
+++ b/Projects/SoundAgentCli/SoundAgentCli.vcxproj
@@ -74,6 +74,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CollectionFactoryImpl.cpp" />
     <ClCompile Include="SoundAgentCli.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
