--- a/Projects/SoundAgentCli/SoundAgentCli.vcxproj.filters
+++ b/Projects/SoundAgentCli/SoundAgentCli.vcxproj.filters
@@ -31,6 +31,9 @@
     <ClCompile Include="SoundAgentCli.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CollectionFactoryImpl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
