--- a/Projects/SoundWinAgent/SoundWinAgent.vcxproj.filters
+++ b/Projects/SoundWinAgent/SoundWinAgent.vcxproj.filters
@@ -52,6 +52,9 @@
     <ClCompile Include="SodiumCrypt.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CollectionFactoryImpl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
