SodiumCrypt moved to submodule

--- a/Projects/SoundWinAgent/SoundWinAgent.vcxproj
+++ b/Projects/SoundWinAgent/SoundWinAgent.vcxproj
@@ -66,7 +66,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="SodiumCrypt.h" />
+    <ClInclude Include="../../ApiClient/SodiumCrypt.h" />
     <ClInclude Include="AssemblyInformation.h" />
     <ClInclude Include="../../ApiClient/AudioDeviceApiClient.h" />
     <ClInclude Include="../../ApiClient/HttpRequestProcessor.h" />
@@ -77,7 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CollectionFactoryImpl.cpp" />
-    <ClCompile Include="SodiumCrypt.cpp" />
+    <ClCompile Include="../../ApiClient/SodiumCrypt.cpp" />
     <ClCompile Include="../../ApiClient/AudioDeviceApiClient.cpp" />
     <ClCompile Include="../../ApiClient/HttpRequestProcessor.cpp" />
     <ClCompile Include="ServiceObserver.cpp" />
